Fix buttons width on mobile

--- a/app/assets/styles/_buttons.scss
+++ b/app/assets/styles/_buttons.scss
@@ -1,4 +1,9 @@
 .btn {
 	text-transform: uppercase;
 	font-size: 1.25rem;
+
+	@include media-breakpoint-down(sm) {
+		padding-right: 1.5rem;
+		padding-left: 1.5rem;
+	}
 }
